# ttally

./: P_README.md  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
tests/: self-test.yaml  test_basic.py  ttally_config.py
ttally/: __init__.py  __main__.py  config.py  core.py  main.py  when.py
