[project]
name = "ttally"
version = "0.1.4"
description = "interactive module to generate code/aliases to save things I do often"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
keywords = ["data", "interactive"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "arrow",
  "autotui>=0.4.6",
  "click>=8.0",
  "more-itertools>=8.0",
  "tabulate",
  "typing-extensions;python_version<'3.11'",
]
[[project.authors]]
name = "purarue"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ttally = "ttally.__main__:main"

[project.urls]
Homepage = "https://github.com/purarue/ttally"

[project.optional-dependencies]
optional = ["arrow", "orjson"]
testing = ["flake8", "mypy"]

[tool.mypy]
pretty = true
show_error_context = true
show_error_codes = true
check_untyped_defs = true
namespace_packages = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[tool.setuptools.packages.find]
include = ["ttally"]
